...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mine.BakingApp.MasterPageFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredient_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
